# TCM-HerbDB

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  demo.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.yml
data/processed/: herb.txt
data/raw/: herb.md
scripts/: save_herbs_to_csv.py
src/tcm_herbdb/: __init__.py  cli.py  config.py  database.py  herb_parser.py  logging_config.py
tests/tcm_herbdb/: test_extended_herb_database.py  test_herb_database.py  test_herb_parser.py
